# rustipelago

./: Cargo.toml  ReadMe.md  typos.toml  version.json
crates/apworlds/: Cargo.toml
crates/apworlds/src/: lib.rs
crates/backend/: Cargo.toml  readme.md
crates/backend/src/: apworld.rs  install.rs  lib.rs  update.rs
crates/backend/src/apworld/: read.rs  write.rs
crates/backend/src/cards/: default_cards.rs  mod.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  messages.rs
crates/cards/: Cargo.toml
crates/cards/src/: default_cards.rs  lib.rs
crates/cards/src/cards/: install_apworld.rs  mod.rs
crates/frontend/: Cargo.toml  readme.md
crates/frontend/src/: apworld.rs  home.rs  lib.rs
crates/frontend/src/cards/: cards.rs  installer.rs  mod.rs
crates/frontend/src/client/: mod.rs  slots.rs  ui.rs
crates/frontend/src/writer/: config.rs  mod.rs  slots.rs
crates/rustipelago/: Cargo.toml
crates/rustipelago/src/: main.rs
crates/schema/: Cargo.toml
crates/schema/src/: archipelago.rs  cards.rs  lib.rs
