[package]
name = "rustipelago_backend"
version = "0.1.0"
edition = "2024"
description = "Backend functions for rutipelago application"

[dependencies]
tokio = "1.52.3"
reqwest = "0.13.4"
anyhow.workspace = true
ghgrab = "2.0.1"
zip = "8.6.0"
walkdir.workspace = true
rand.workspace = true
# rustipelago_apworlds.workspace = true
