[package]
name = "rustipelago_backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ghgrab = "2.0.1"
rand.workspace = true
reqwest = { version = "0.13.4", features = ["json"] }
rustipelago_bridge.workspace = true
rustipelago_schema.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = "1.52.3"
walkdir.workspace = true
zip = "8.6.0"
