[package]
name = "rustipelago_frontend"
version = "0.1.0"
edition = "2024"
description = "GUI for rustipelago"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui-component-assets = {
  git = "https://github.com/longbridge/gpui-component.git"
}
gpui_platform = {
  git = "https://github.com/zed-industries/zed",
  features = ["font-kit", "runtime_shaders", "wayland", "x11"]
}

anyhow.workspace = true
dirs.workspace = true
rand.workspace = true
rustipelago_apworlds.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed = "8.12.0"
