[package]
name = "rustipelago_frontend"
version.workspace = true
edition.workspace = true

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui-component-assets = {
  git = "https://github.com/longbridge/gpui-component.git"
}
gpui_platform = {
  git = "https://github.com/zed-industries/zed",
  features = ["font-kit", "runtime_shaders", "wayland", "x11"]
}

anyhow.workspace = true
async-channel = "2.5.0"
dirs.workspace = true
rand.workspace = true
rust-embed = "8.12.0"
rustipelago_bridge.workspace = true
rustipelago_schema.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
